- rewritten all existing uses of Slot/MultiSlot using Slot2 - fixed that removing a parent from a WidgetState sometimes caused other parents to be removed, causing frozen size of some boxes in LinearLayout2x2Test